--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "pino-pretty": "^4.8.0",
     "prettier": "^2.2.1",
+    "sass": "^1.32.13",
+    "sass-loader": "^11.0.0",
     "typescript": "~4.2",
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
