--- a/package.json
+++ b/package.json
@@ -26,13 +26,19 @@
     "youch-terminal": "^1.1.1"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.0.3",
     "@adonisjs/core": "^5.1.6",
-    "@adonisjs/lucid": "^14.0.1",
+    "@adonisjs/lucid": "^14.0.2",
     "@adonisjs/repl": "^3.1.2",
     "@adonisjs/session": "^6.0.3",
     "@adonisjs/shield": "^7.0.2",
     "@adonisjs/view": "^6.0.1",
+    "@popperjs/core": "^2.9.2",
+    "bootstrap": "^5.0.1",
     "luxon": "^1.26.0",
+    "phc-argon2": "^1.1.1",
+    "phc-bcrypt": "^1.0.7",
+    "popper.js": "^1.16.1",
     "proxy-addr": "^2.0.6",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
