--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
     "luxon": "^1.26.0",
+    "pg": "^8.6.0",
     "phc-argon2": "^1.1.1",
     "phc-bcrypt": "^1.0.7",
     "popper.js": "^1.16.1",
     "proxy-addr": "^2.0.6",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "url-parse": "^1.5.1"
   }
 }
