--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "pino-pretty": "^4.8.0",
     "prettier": "^2.3.0",
-    "sass": "^1.34.0",
+    "sass": "^1.32.*",
     "sass-loader": "^11.1.1",
     "typescript": "~4.2",
     "youch": "^2.2.2",
